# nestedhexplugin

./: AUTHORS  AUTHORS~  ChangeLog  Makefile.am  NEWS  NEWS~  README  README~  configure.ac  configure.ac~
examples/: example1.hex  example2.hex  nestedhex.hex
include/: ExternalAtoms.h  Makefile.am  Makefile.am~  NestedHexParser.h  NestedHexPlugin.h  Parser.h
src/: ExternalAtoms.cpp  Makefile.am  Makefile.am~  NestedHexParser.cpp  NestedHexPlugin.cpp  NestedHexPlugin.cpp~  Parser.cpp
testsuite/: Makefile.am
vs10/: nestedhexplugin.sln
vs10/nestedhexplugin/: config.h  nestedhexplugin.vcxproj  nestedhexplugin.vcxproj.filters
vs10/setup/: setup.vdproj
